--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -3,9 +3,10 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./toggler.css">
     </head>
     <body>
-
+        <div class="wrap543"></div>
     </body>
 </html>
