--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -7,6 +7,17 @@
         <link rel="stylesheet" href="./toggler.css">
     </head>
     <body>
-        <div class="wrap543"></div>
+        <div class="wrap543">
+            <div class="inputs-dz">
+                <span class="inputs-dz__title">Toggle Button</span>
+
+                <div class="inputs-dz__content">
+
+                    <label class="checkbox">
+                        <input type="checkbox" class="checkbox__input">
+                    </label>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
